Homework/src/objects/Shop__c.object
<CustomObject>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <description>Annual revenue of the shop</description>
        <formula>Monthly_Revenue__c * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Corporation__c</fullName>
        <description>Corporation of shop</description>
        <label>Corporation</label>
        <referenceTo>Corporation__c</referenceTo>
        <relationshipLabel>Shops</relationshipLabel>
        <relationshipName>Shops</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Director of the shop</description>
        <label>Director</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Shops</relationshipLabel>
        <relationshipName>Shops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monthly_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Monthly revenue of the shop</description>
        <label>Monthly Revenue</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Shop</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Rich_Web_Shop</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Shop__c.Web_shop</value>
        </filters>
        <filters>
            <field>Annual_Revenue__c</field>
            <operation>greaterThan</operation>
            <value>140000</value>
        </filters>
        <label>Rich Web Shop</label>
    </listViews>
    <nameField>
        <label>Shop Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shops</pluralLabel>
    <recordTypes>
        <fullName>Supermarket</fullName>
        <active>true</active>
        <description>Supermarket</description>
        <label>Supermarket</label>
    </recordTypes>
    <recordTypes>
        <fullName>Web_shop</fullName>
        <active>true</active>
        <description>Web shop</description>
        <label>Web shop</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Monthly_Revenue_Greater_Then_Zero</fullName>
        <active>true</active>
        <description>Validate field Monthly Revenue. Field must be greater than or equal 0.</description>
        <errorConditionFormula>Monthly_Revenue__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>Monthly_Revenue__c</errorDisplayField>
        <errorMessage>Monthly revenue must not be less than 0</errorMessage>
    </validationRules>
</CustomObject>